--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "os"]
 	path = os
-	url = git@codechina.csdn.net:A916583011/rcore-tutorial-v3.git
+	url = git@github.com:pythonlearninger/os.git
